--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,18 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
-
-group = 'org.example'
-version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
-
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
+    testImplementation(
+            "org.junit.jupiter:junit-jupiter:5.10.0",
+            "com.codeborne:selenide:7.2.0",
+            "org.slf4j:slf4j-simple:2.0.7"
 
-test {
+    )
+}
+test{
     useJUnitPlatform()
 }
